Including NER analysis

--- a/nlp-tutorial-es.ipynb
+++ b/nlp-tutorial-es.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLP basic tutorial (spanish)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install wordcloud"
+    "!python -m spacy download es_core_news_md"
    ]
   },
   {
@@ -25,6 +32,10 @@
     "\n",
     "from wordcloud import WordCloud\n",
     "\n",
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "import es_core_news_md\n",
+    "\n",
     "from pymongo import MongoClient\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,10 +43,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Connecting to database and getting texts"
+    "jar = \"./pos-tagger/stanford-postagger/stanford-postagger-4.2.0.jar\"\n",
+    "model = \"./pos-tagger/stanford-postagger/models/spanish-ud.tagger\"\n",
+    "os.environ[\"JAVAHOME\"] = \"/usr/bin/java\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = es_core_news_md.load()"
    ]
   },
   {
@@ -45,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Creating a connection to MongoDB\n",
-    "client = MongoClient(\"localhost\", 27017)\n",
+    "client = MongoClient(\"146.148.63.14\", 27017)\n",
     "db = client[\"news\"]\n",
     "collection = db[\"elespectador\"]"
    ]
@@ -82,10 +106,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Lowercasing"
+    "# Word tokenization\n",
+    "words = word_tokenize(text)"
    ]
   },
   {
@@ -94,14 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = text.lower() # WARNING"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tokenization"
+    "words[:10]"
    ]
   },
   {
@@ -110,9 +130,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentences = sent_tokenize(text)\n",
+    "# Words distribution\n",
+    "frec_dist = FreqDist(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Printing the most common words\n",
+    "frec_dist.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stop words\n",
+    "# Stop words are basically a set of commonly used words in any language, not just English.\n",
+    "# The reason why stop words are critical to many applications is that, if we remove the words that are very commonly used in a given language, we can focus on the important words instead.\n",
     "\n",
-    "print(sentences)"
+    "stop_words = set(stopwords.words(\"spanish\"))"
    ]
   },
   {
@@ -121,96 +163,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = word_tokenize(text)\n",
-    "\n",
-    "print(words)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Words distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frec_dist = FreqDist(words)\n",
-    "\n",
-    "print(frec_dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frec_dist.most_common(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 10\n",
-    "plt.bar([ w[0] for w in frec_dist.most_common(n) ], [ w[1] for w in frec_dist.most_common(n) ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(text)\n",
-    "\n",
-    "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
-    "plt.axis(\"off\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stopwords\n",
-    "\n",
-    "Stop words are basically a set of commonly used words in any language, not just English.\n",
-    "\n",
-    "The reason why stop words are critical to many applications is that, if we remove the words that are very commonly used in a given language, we can focus on the important words instead."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop_words = set(stopwords.words(\"spanish\"))\n",
-    "print(stop_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Removing stop words\n",
     "filtered_words = []\n",
+    "\n",
     "for w in words:\n",
     "    if w not in stop_words:\n",
-    "        filtered_words.append(w)\n",
-    "\n",
-    "print(\"All words:\", words)\n",
-    "print(\"\\n\")\n",
-    "print(\"Substracting stopwords:\", filtered_words)"
+    "        filtered_words.append(w)"
    ]
   },
   {
@@ -219,20 +177,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(\" \".join(filtered_words))\n",
+    "# Words distribution for text without stopwords\n",
+    "frec_dist_filtered = FreqDist(filtered_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Printing the most common words\n",
+    "frec_dist_filtered.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting a bar char for frecuencies\n",
+    "n = 10\n",
     "\n",
+    "plt.figure(figsize = (15, 8))\n",
+    "plt.barh([ w[0] for w in frec_dist_filtered.most_common(n) ], [ w[1] for w in frec_dist_filtered.most_common(n) ])\n",
+    "plt.gca().invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the wordcloud\n",
+    "# Word size is directly related to frecuency\n",
+    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(text)\n",
+    "\n",
+    "plt.figure(figsize = (10, 10))\n",
     "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Part of Speech\n",
+    "# Creating the wordcloud without stopwords\n",
+    "# Word size is directly related to frecuency\n",
+    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(\" \".join(filtered_words))\n",
     "\n",
-    "https://nlp.stanford.edu/software/"
+    "plt.figure(figsize = (10, 10))\n",
+    "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -241,28 +243,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jar = \"./pos-tagger/stanford-postagger/stanford-postagger-4.2.0.jar\"\n",
-    "model = \"./pos-tagger/stanford-postagger/models/spanish-ud.tagger\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "java_path = \"/usr/bin/java\"\n",
-    "os.environ[\"JAVAHOME\"] = java_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Part of Speech (PoS)\n",
+    "# Model optimized for spanish: https://nlp.stanford.edu/software/\n",
     "pos_tagger = StanfordPOSTagger(model, jar, encoding = \"utf8\")\n",
-    "pos_tagger.tag(words)"
+    "pos_tags = pos_tagger.tag(filtered_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_tags.sort(key = lambda tup: tup[1])\n",
+    "pos_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Named Entity Recognition (NER)\n",
+    "document = nlp(text)\n",
+    "displacy.render(document, style = \"ent\")"
    ]
   },
   {
