--- a/nlp-tutorial-extended.ipynb
+++ b/nlp-tutorial-extended.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLP basics tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install wordcloud"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -U spacy\n",
-    "!python -m spacy download en_core_web_sm"
+    "# NLP basics tutorial extended"
    ]
   },
   {
@@ -63,18 +44,7 @@
    "outputs": [],
    "source": [
     "# Creating a simple text\n",
-    "text = \"Hello Mr. Smith, how are you doing today? The weather is great, and city is awesome. The sky is pinkish-blue. You shouldn't eat cardboard\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lowercasing\n",
-    "# WARNING: In some ocassions, capital letters could have semantic meaning\n",
-    "text.lower()"
+    "text = open(\"./data/news.txt\").read()"
    ]
   },
   {
@@ -84,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Sentence tokenization\n",
-    "sent_tokenize(text)"
+    "sent_tokenize(text)[:10]"
    ]
   },
   {
@@ -103,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "words"
+    "words[:10]"
    ]
   },
   {
@@ -123,36 +93,7 @@
    "outputs": [],
    "source": [
     "# Printing the most common words\n",
-    "frec_dist.most_common(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plotting a bar char for frecuencies\n",
-    "n = 10\n",
-    "\n",
-    "plt.figure(figsize = (15, 8))\n",
-    "plt.barh([ w[0] for w in frec_dist.most_common(n) ], [ w[1] for w in frec_dist.most_common(n) ])\n",
-    "plt.gca().invert_yaxis()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating the wordcloud\n",
-    "# Word size is directly related to frecuency\n",
-    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(text)\n",
-    "\n",
-    "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
-    "plt.axis(\"off\")\n",
-    "plt.show()"
+    "frec_dist.most_common(10)"
    ]
   },
   {
@@ -174,7 +115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stop_words"
+    "# Removing stop words\n",
+    "filtered_words = []\n",
+    "\n",
+    "for w in words:\n",
+    "    if w not in stop_words:\n",
+    "        filtered_words.append(w)"
    ]
   },
   {
@@ -183,16 +129,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Removing stop words\n",
-    "filtered_words = []\n",
+    "# Words distribution for text without stopwords\n",
+    "frec_dist_filtered = FreqDist(filtered_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Printing the most common words\n",
+    "frec_dist_filtered.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting a bar char for frecuencies\n",
+    "n = 10\n",
     "\n",
-    "for w in words:\n",
-    "    if w not in stop_words:\n",
-    "        filtered_words.append(w)\n",
+    "plt.figure(figsize = (15, 8))\n",
+    "plt.barh([ w[0] for w in frec_dist_filtered.most_common(n) ], [ w[1] for w in frec_dist_filtered.most_common(n) ])\n",
+    "plt.gca().invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the wordcloud\n",
+    "# Word size is directly related to frecuency\n",
+    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(text)\n",
     "\n",
-    "print(\"Original words:\", words)\n",
-    "print(\"\\n\")\n",
-    "print(\"Substracting stopwords:\", filtered_words)"
+    "plt.figure(figsize = (10, 10))\n",
+    "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -203,7 +181,7 @@
    "source": [
     "# Part of Speech (PoS)\n",
     "# The meaning of each tag can be found here: https://www.guru99.com/pos-tagging-chunking-nltk.html\n",
-    "pos_tags = nltk.pos_tag(words)"
+    "pos_tags = nltk.pos_tag(filtered_words)"
    ]
   },
   {
