--- a/nlp-tutorial-es.ipynb
+++ b/nlp-tutorial-es.ipynb
@@ -163,11 +163,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "stop_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Removing stop words\n",
     "filtered_words = []\n",
     "\n",
     "for w in words:\n",
-    "    if w not in stop_words:\n",
+    "    if w.lower() not in stop_words:\n",
     "        filtered_words.append(w)"
    ]
   },
@@ -257,6 +266,24 @@
    "source": [
     "pos_tags.sort(key = lambda tup: tup[1])\n",
     "pos_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(pos_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_tags[-100:]"
    ]
   },
   {
