--- a/nlp-tutorial-extended.ipynb
+++ b/nlp-tutorial-extended.ipynb
@@ -119,7 +119,7 @@
     "filtered_words = []\n",
     "\n",
     "for w in words:\n",
-    "    if w not in stop_words:\n",
+    "    if w.lower() not in stop_words:\n",
     "        filtered_words.append(w)"
    ]
   },
@@ -166,6 +166,22 @@
     "# Creating the wordcloud\n",
     "# Word size is directly related to frecuency\n",
     "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(text)\n",
+    "\n",
+    "plt.figure(figsize = (10, 10))\n",
+    "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the wordcloud\n",
+    "# Word size is directly related to frecuency\n",
+    "wordcloud = WordCloud(max_font_size = 50, max_words = 100, background_color = \"white\").generate(\" \".join(filtered_words))\n",
     "\n",
     "plt.figure(figsize = (10, 10))\n",
     "plt.imshow(wordcloud, interpolation = \"bilinear\")\n",
