--- a/nlp-tutorial.ipynb
+++ b/nlp-tutorial.ipynb
@@ -187,7 +187,7 @@
     "filtered_words = []\n",
     "\n",
     "for w in words:\n",
-    "    if w not in stop_words:\n",
+    "    if w.lower() not in stop_words:\n",
     "        filtered_words.append(w)\n",
     "\n",
     "print(\"Original words:\", words)\n",
