Primera parte, proceso de web scrapping

--- a/nlp-tutorial-extended.ipynb
+++ b/nlp-tutorial-extended.ipynb
@@ -4,12 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLP basics tutorial extended"
+    "# NLP workshop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m spacy download es_core_news_md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing required libraries for web scrapping\n",
+    "\n",
+    "import time\n",
+    "import datetime\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "from pymongo import MongoClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +56,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = en_core_web_sm.load()"
+    "import es_core_news_md\n",
+    "from nltk.tag import StanfordPOSTagger\n",
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jar = \"./pos-tagger/stanford-postagger/stanford-postagger-4.2.0.jar\"\n",
+    "model = \"./pos-tagger/stanford-postagger/models/spanish-ud.tagger\"\n",
+    "os.environ[\"JAVAHOME\"] = \"/usr/bin/java\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a connection to MongoDB\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['news-workshop']\n",
+    "collection = db['elespectador-workshop']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base URL of the site to be analyzed\n",
+    "SITE_URL = 'https://www.elespectador.com'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Firefox web driver path\n",
+    "# Download the driver for you S.O. here: https://github.com/mozilla/geckodriver/releases\n",
+    "DRIVER_PATH = './geckodriver.exe'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\BORISL~1\\AppData\\Local\\Temp/ipykernel_2424/1910320475.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  browser = webdriver.Firefox(executable_path = DRIVER_PATH)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a new firefox window\n",
+    "browser = webdriver.Firefox(executable_path = DRIVER_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_request(browser, relative_path):\n",
+    "    # Making the request and rendering the browser\n",
+    "    browser.get(SITE_URL + relative_path)\n",
+    "    \n",
+    "    # Simulating vertical scrolling for handling lazy load\n",
+    "    check_height = browser.execute_script('return document.body.scrollHeight;')\n",
+    "    while True:\n",
+    "        browser.execute_script('window.scrollTo(0, document.body.scrollHeight);')\n",
+    "        time.sleep(3)\n",
+    "        height = browser.execute_script('return document.body.scrollHeight;')\n",
+    "        if height == check_height: \n",
+    "            break \n",
+    "        check_height = height\n",
+    "    \n",
+    "    # Getting HTML content and passing it to BeautifulSoup for scraping analysis\n",
+    "    return BeautifulSoup(browser.page_source, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = ['/archivo/politica/elecciones-colombia-2022/', '/archivo/tecnologia/', '/archivo/ambiente/', '/archivo/salud/', '/archivo/educacion/' ]\n",
+    "\n",
+    "paginator = 1\n",
+    "\n",
+    "news = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for category in categories:\n",
+    "    # Getting HTML content for a particular news listing page\n",
+    "    wand = True\n",
+    "    \n",
+    "    while wand:\n",
+    "        page = \"{}{}/\".format(category, paginator)\n",
+    "        soup = make_request(browser, page)\n",
+    "    \n",
+    "        # Finding the section where news are contained \n",
+    "        layout = soup.find(class_ = 'Layout-flexAds')\n",
+    "    \n",
+    "        # Getting blocks from layout\n",
+    "        blocks = layout.find_all(class_ = 'Container Block', recursive = True)\n",
+    "    \n",
+    "        # Finding and concatenating news cards\n",
+    "        cards = blocks[0].find_all(class_ = 'Card_rowCardLeft') + blocks[1].find_all(class_ = 'Card_rowCardLeft')\n",
+    "        \n",
+    "        for card in cards[:2]:\n",
+    "            date = card.find(class_ = 'Card-Datetime Datetime').get_text()\n",
+    "            \n",
+    "            x = datetime.datetime.now()- datetime.timedelta(weeks=2)\n",
+    "            months = ['feb.', 'mar.', 'apr.']\n",
+    "            partes = date.split(\" \")\n",
+    "            if (partes[1]=='abr.'):\n",
+    "                partes[1] = 'apr.'\n",
+    "            elif(partes[1] not in months):\n",
+    "                partes[1] = 'apr.'\n",
+    "                partes[0] = datetime.datetime.now().day\n",
+    "                partes[2] = datetime.datetime.now().year\n",
+    "            fecha = \"{}-{}-{}\".format(partes[0], partes[1].replace(\".\",\"\"), partes[2])\n",
+    "            date = datetime.datetime.strptime(fecha, '%d-%b-%Y')\n",
+    "            if date<x:\n",
+    "                wand = False\n",
+    "            \n",
+    "            # Getting HTML content for each news page\n",
+    "            r_path = card.find('h2', class_ = 'Card-Title').find('a')['href']\n",
+    "            soup = make_request(browser, r_path)\n",
+    "            \n",
+    "            author = \"\"\n",
+    "            paragraphs = soup.find_all(class_ = 'font--secondary')\n",
+    "            \n",
+    "            if soup.find(class_ = 'ACredit-Author').find('a'):\n",
+    "                author = soup.find(class_ = 'ACredit-Author').find('a').get_text()\n",
+    "            else:\n",
+    "                author = soup.find(class_ = 'ACredit-Author').get_text()\n",
+    "            \n",
+    "            categ = category.split(\"/\")[2]\n",
+    "            \n",
+    "            news.append({\n",
+    "                'title': card.find('h2', class_ = 'Card-Title').find('a').get_text(),\n",
+    "                'relative_path': r_path,\n",
+    "                'datetime' : date,\n",
+    "                'author' : author,\n",
+    "                'summary' : soup.find(class_ = 'ArticleHeader-Hook').find('div').get_text(),\n",
+    "                'full_text' : ' '.join([p.get_text() for p in paragraphs]),\n",
+    "                'category' : categ,\n",
+    "            })\n",
+    "        \n",
+    "        paginator+=1\n",
+    "    \n",
+    "    paginator = 1\n",
+    "            "
    ]
   },
   {
@@ -43,8 +242,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a simple text\n",
-    "text = open(\"./data/news.txt\").read()"
+    "news"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x1e8c5d26670>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Storing extracted information for further analysis\n",
+    "collection.insert_many(news)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "We start the NLP process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = es_core_news_md.load()"
    ]
   },
   {
@@ -232,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
