--- a/nlp-workshop.ipynb
+++ b/nlp-workshop.ipynb
@@ -121,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\BORISL~1\\AppData\\Local\\Temp/ipykernel_2424/1910320475.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  browser = webdriver.Firefox(executable_path = DRIVER_PATH)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a new firefox window\n",
     "browser = webdriver.Firefox(executable_path = DRIVER_PATH)"
@@ -177,15 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "# Traveling through the categories\n",
     "for category in categories:\n",
     "    # Getting HTML content for a particular news listing page\n",
     "    wand = True\n",
     "    \n",
+    "    # We are using a wand in order to control how many news we read, based on their dates.\n",
     "    while wand:\n",
+    "        # Controlling the page which will be showing cards for every cycle\n",
     "        page = \"{}{}/\".format(category, paginator)\n",
     "        soup = make_request(browser, page)\n",
     "    \n",
@@ -198,9 +194,11 @@
     "        # Finding and concatenating news cards\n",
     "        cards = blocks[0].find_all(class_ = 'Card_rowCardLeft') + blocks[1].find_all(class_ = 'Card_rowCardLeft')\n",
     "        \n",
+    "        # Reviewing a maximun of two cards by page (in order to mantain low processing power for the exercise)\n",
     "        for card in cards[:2]:\n",
     "            date = card.find(class_ = 'Card-Datetime Datetime').get_text()\n",
     "            \n",
+    "            # Preparing dates for making the comparison with the limit set\n",
     "            x = datetime.datetime.now()- datetime.timedelta(weeks=2)\n",
     "            months = ['feb.', 'mar.', 'apr.']\n",
     "            partes = date.split(\" \")\n",
@@ -212,6 +210,7 @@
     "                partes[2] = datetime.datetime.now().year\n",
     "            fecha = \"{}-{}-{}\".format(partes[0], partes[1].replace(\".\",\"\"), partes[2])\n",
     "            date = datetime.datetime.strptime(fecha, '%d-%b-%Y')\n",
+    "            # Comparing the date limit\n",
     "            if date<x:\n",
     "                wand = False\n",
     "            \n",
@@ -222,6 +221,7 @@
     "            author = \"\"\n",
     "            paragraphs = soup.find_all(class_ = 'font--secondary')\n",
     "            \n",
+    "            # Managing the case where the author is not in a \"a\" tag\n",
     "            if soup.find(class_ = 'ACredit-Author').find('a'):\n",
     "                author = soup.find(class_ = 'ACredit-Author').find('a').get_text()\n",
     "            else:\n",
@@ -229,6 +229,7 @@
     "            \n",
     "            categ = category.split(\"/\")[2]\n",
     "            \n",
+    "            # Apending the obtained data\n",
     "            news.append({\n",
     "                'title': card.find('h2', class_ = 'Card-Title').find('a').get_text(),\n",
     "                'relative_path': r_path,\n",
@@ -238,9 +239,9 @@
     "                'full_text' : ' '.join([p.get_text() for p in paragraphs]),\n",
     "                'category' : categ,\n",
     "            })\n",
-    "        \n",
+    "        # Advancing on pages\n",
     "        paginator+=1\n",
-    "    \n",
+    "    # Restarting the paginator\n",
     "    paginator = 1\n",
     "            "
    ]
