--- a/examen.ipynb
+++ b/examen.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLP workshop\n",
+    "# Test 2\n",
     "## Imports and configurations \n",
-    " (db, global variables, gecko...)"
+    " (global variables, gecko...)"
    ]
   },
   {
